<resources>
    <string name="app_name">FitApp</string>
    <string name="avatar_image">avatar image</string>
    <string name="who_are_you">Who are you?</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="next">Next</string>
    <string name="pick_date">Pick date</string>
    <string name="lb">lb</string>
    <string name="st_lb">st/lb</string>
    <string name="kg">kg</string>
    <string name="in">in</string>
    <string name="ft_in">ft/in</string>
    <string name="cm">cm</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="target_body_weight">Target body weight in kg</string>
    <string name="current_body_weight">Current body weight in kg</string>
    <string name="height">Height in cm</string>
    <string name="email">Email</string>
    <string name="first_last_name"><![CDATA[First & Last name]]></string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="logo">FitApp</string>
    <string name="logo_background">logo background</string>
    <string name="name_login">Name</string>
    <string name="login">Login</string>
    <string name="options">Options</string>
    <string name="delete_account">Delete account</string>
    <string name="about_us">About us</string>
    <string name="recipes">Recipes</string>
    <string name="more">More</string>
    <string name="menu">Menu</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="daily_calorie_limit">daily calorie limit</string>
    <string name="you_will_reach_your_goal_on">You will reach your goal on</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="kcal">Kcal</string>
    <string name="breakfast">Breakfast</string>
    <string name="sec_breakfast">Second Breakfast</string>
    <string name="new_product">New product</string>
    <string name="energy">Energy values</string>
    <string name="_0_kcal">0 kcal 0 g 0 g 0 g</string>
    <string name="plus">+</string>
    <string name="fats">Fats</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbohydrates</string>
    <string name="carb">Carbs</string>
    <string name="proteins">Proteins</string>
    <string name="protein">Protein</string>
    <string name="gram">g</string>
    <string name="targets">Targets</string>
    <string name="body_weight">Body weight</string>
    <string name="rate_of_weight_change">Rate of weight change</string>
    <string name="minus">-</string>
    <string name="_0_5_kg">0,5 kg</string>
    <string name="_0_1_0_7_kg_per_week_nrecommended_rate_of_weight_nchange_n_n0_8_1_kg_per_week_nhigh_rate_of_weight_change_can_be_nunhealthy">0.1-0.7 kg per week\nRecommended rate of weight\nchange\n\n0.8-1 kg per week\nHigh rate of weight change, can be\nunhealthy</string>
    <string name="target_achievemnt_forecast">Target achievemnt forecast</string>
    <string name="time_to_weight_in">Time to weight in</string>
    <string name="last_time_weighted">the last time you weighted yourself</string>
    <string name="new_record">New record</string>
    <string name="weight_calendar">Weight</string>
    <string name="recently_eaten">Recently eaten</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="dinner">Dinner</string>

</resources>