<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FBFF"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/editTextNames"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/first_last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/editTextPasswd"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/buttons"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/loginBtn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="418dp"
        android:layout_height="112dp"
        android:contentDescription="@string/logo_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle_blue" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>