<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#616061"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personalText"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="69dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/first_last_name"
        android:inputType="text"
        android:textColorHint="#616061"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="69dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#616061"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="339dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/buttons"
        android:onClick="register"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
</androidx.constraintlayout.widget.ConstraintLayout>