<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".MoreUI">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle_black" />

    <RadioGroup
        android:id="@+id/mainMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <RadioButton
            android:id="@+id/Menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textColor="@drawable/menu"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/WeightCalendar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/weight_calendar"
            android:textAlignment="center"
            android:textColor="@drawable/menu"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/More"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/more"
            android:textAlignment="center"
            android:textColor="@drawable/menu"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="156dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:clickable="true"
        android:drawableStart="@drawable/options"
        android:focusable="true"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="options"
        android:text="@string/options"
        android:textColor="#616061"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:drawableStart="@drawable/about_us"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/about_us"
        android:textColor="#616061"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsButton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="6dp"
        android:background="@null"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="reAuth"
        android:text="@string/delete_account"
        android:textColor="#616061"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="6dp"
        android:background="@null"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="#616061"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>