<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@drawable/popup_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/time_to_weight_in"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="X days"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="48dp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/last_time_weighted"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="30dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/new_record"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>