<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TargetsRateWeight">

    <Button
        android:id="@+id/plusButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginStart="22dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="133dp"
        android:background="@drawable/circle_blue"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="false"
        android:onClick="plusRateOfWeight"
        android:text="@string/plus"
        android:textAlignment="gravity"
        android:textColor="#EDF5FC"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginStart="116dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/circle_blue"
        android:fontFamily="@font/poppins"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="false"
        android:onClick="minusRateOfWeight"
        android:text="@string/minus"
        android:textAlignment="gravity"
        android:textColor="#EDF5FC"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="407dp"
        android:layout_height="66dp"
        app:cardBackgroundColor="#3171FE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center|start"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:drawableStart="@drawable/ic_arrow"
            android:onClick="back" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/targets"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/rate_of_weight_change"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center|end"
            android:background="@null"
            android:onClick="save"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="307dp"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/rectangle_border"
        android:fontFamily="@font/poppins"
        android:text="@string/_0_5_kg"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="53dp"
        android:background="@drawable/rectangle_gray"
        android:fontFamily="@font/inter"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/_0_1_0_7_kg_per_week_nrecommended_rate_of_weight_nchange_n_n0_8_1_kg_per_week_nhigh_rate_of_weight_change_can_be_nunhealthy"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="385dp"
        android:layout_height="53dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/rectangle_gray"
        android:fontFamily="@font/inter"
        android:paddingTop="20dp"
        android:text="{date of reach goal} (weeks to target: {days to reach goal})"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/inter"
        android:text="@string/target_achievemnt_forecast"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

</androidx.constraintlayout.widget.ConstraintLayout>