<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FBFF"
    tools:context=".RecipesUI">

    <RadioGroup
        android:id="@+id/mainMenu"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/Menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3D3D3D"
            android:button="@null"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textColor="@drawable/menu"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/Recipes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3D3D3D"
            android:button="@null"
            android:checked="true"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/recipes"
            android:textAlignment="center"
            android:textColor="@drawable/menu"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/More"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3D3D3D"
            android:button="@null"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/more"
            android:textAlignment="center"
            android:textColor="@drawable/menu"
            android:textSize="16sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>